fixed overflow issue in small screens

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -1,10 +1,14 @@
 #about {
     display: none;
-    margin: 0;
+    
     background-color: rgba(0, 0, 0, 0.5);
     margin: auto;
-    color: white;
+
     flex-direction: column;
     align-items:center;
     justify-content:center;
+
+    color: white;
+    width: 50%;
+    padding: 15px;
 }
