--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,5 +1,4 @@
 #home {
-    margin: 0;
     background-color: rgba(0, 0, 0, 0.5);
     flex: 1;
 
