--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,7 @@ body {
         background-color: rgb(0, 128, 0, 0.2);
         background-size: cover;
         background-attachment: fixed;
-        height: 100vh;
+        min-height: 100vh;
         display: flex;
         flex-direction: column;
     }
